deploy widget and demo

--- a/widget-frontend/index.html
+++ b/widget-frontend/index.html
@@ -53,7 +53,7 @@
     const currency = getUrlParameter('currency');
     const network = getUrlParameter('network');
     const walletAddress = getUrlParameter('address');
-    const apiKey = getUrlParameter('apiKey'); //'<Your Onramper API key Here>';
+    const apiKey = getUrlParameter('apiKey');
 
     let createWidget = new keypOnrampWidget({
       elementId: "keypWidget",
